fix align of contacts and socials for footer(desk)

--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -318,14 +318,6 @@ $container-padding-s: 60px;
     height: auto;
   }
 
-  .footer {
-    .development {
-      .rights {
-        margin-right: 260px;
-      }
-    }
-  }
-
   .partners {
     margin: 25px 0;
 
